<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".Login_SignUp_ForgetPassword_Portal.MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="156dp"
        android:layout_height="210dp"

        android:layout_gravity="center"
        android:layout_marginTop="55dp"
        app:srcCompat="@drawable/blood"
        android:contentDescription="TODO" />

    <EditText
        android:id="@+id/ipAddress"
        android:layout_width="308dp"
        android:layout_height="45dp"
        android:layout_marginLeft="50dp"
        android:background="@drawable/edit_round"
        android:ems="10"
        android:hint="Enter Ip address"
        android:inputType="text"
        android:text="192.168.1.69" />

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="BloodLink"
        android:textAlignment="center"
        android:textColor="#ffff"
        android:textSize="35dp"
        android:fontFamily="@font/font1"/>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailContainer"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="40dp"
        app:boxBackgroundColor="@color/white"
        app:boxStrokeColor="@color/Lightblue"
        app:boxBackgroundMode="filled"
        app:boxCornerRadiusBottomEnd="12dp"
        app:boxCornerRadiusBottomStart="12dp"
        app:boxCornerRadiusTopEnd="12dp"
        app:boxCornerRadiusTopStart="12dp"


        app:endIconMode="clear_text"
        app:endIconTint="#2196F3"
        app:helperText=""

        app:helperTextTextColor="@color/red"
        app:startIconDrawable="@drawable/baseline_person_24"
        app:startIconTint="#2196F3">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/phone_number"
            android:inputType="textEmailAddress"
            android:lines="1"
            android:text="2222222222" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordContainer"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="15dp"
        app:boxBackgroundColor="@color/white"
        app:boxStrokeColor="#2196F3"
        app:boxBackgroundMode="filled"
        app:boxCornerRadiusBottomEnd="12dp"
        app:boxCornerRadiusBottomStart="12dp"

        app:boxCornerRadiusTopEnd="12dp"
        app:boxCornerRadiusTopStart="12dp"

        app:counterEnabled="true"
        app:counterMaxLength="8"

        app:endIconMode="password_toggle"
        app:endIconTint="#2196F3"
        app:helperText="@string/required"
        app:helperTextTextColor="@color/red"
        app:startIconDrawable="@drawable/baseline_lock_24"
        app:startIconTint="#2196F3">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:lines="1"
            android:maxLength="8"
            android:text="Tero@123" />
    </com.google.android.material.textfield.TextInputLayout>



    <Button
        android:id="@+id/loginBtn"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/login"
        android:textAlignment="center"
        android:textColor="#ffff"
        android:textSize="18dp"
        android:background="@drawable/edit_round"
        android:layout_marginTop="20dp"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        />
    <Button
        android:id="@+id/signUpBtn"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/sign_up"
        android:textAlignment="center"
        android:textColor="#ffff"
        android:textSize="18dp"
        android:background="@drawable/edit_round"
        android:layout_marginTop="20dp"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        />
    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/forgot_password"
        android:textAlignment="center"
        android:textColor="#ffff"
        android:textSize="18dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:contextClickable="true"
        />

</LinearLayout>