<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".searchdonor.searchdonor"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:text="Search Donor"
        android:textColor="@color/white"
        android:textSize="40dp"
        android:fontFamily="@font/font1"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/patientNameContainer"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="40dp"
        app:boxBackgroundColor="@color/white"
        app:boxStrokeColor="@color/Lightblue"
        app:boxBackgroundMode="filled"
        app:boxCornerRadiusBottomEnd="12dp"
        app:boxCornerRadiusBottomStart="12dp"
        app:boxCornerRadiusTopEnd="12dp"
        app:boxCornerRadiusTopStart="12dp"
        app:endIconMode="clear_text"
        app:endIconTint="#2196F3"
        app:helperText="@string/required"

        app:helperTextTextColor="@color/red"
   >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/patientNameEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/patient_name"
            android:inputType="text"
            android:lines="1"
            android:textSize="14sp"
            android:gravity="center"/>
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.Material3.TextInputLayout.FilledBox.ExposedDropdownMenu"

        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="20dp"

        app:boxBackgroundColor="#FFFFFFFF"
        app:boxStrokeColor="@color/Lightblue"
        app:boxCornerRadiusBottomEnd="12dp"
        app:boxCornerRadiusBottomStart="12dp"
        app:boxCornerRadiusTopEnd="12dp"
        app:boxCornerRadiusTopStart="12dp"


        app:boxStrokeWidth="0dp"
        app:hintEnabled="false">

        <AutoCompleteTextView

            android:id="@+id/bloodgroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:gravity="center"
            android:hint="@string/bloodgroup"
            android:inputType="none"
            android:rotation="0"
            android:textColorHint="#0B0B0B"
            android:textSize="14sp"
            android:importantForAccessibility="no"

            />

    </com.google.android.material.textfield.TextInputLayout>

<!--    <EditText-->
<!--        android:id="@+id/bloodgroup"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="50dp"-->
<!--        android:layout_marginLeft="50dp"-->
<!--        android:layout_marginTop="20dp"-->
<!--        android:layout_marginRight="50dp"-->
<!--        android:background="@drawable/edit_round"-->
<!--        android:hint="BloodGroup"-->
<!--        android:textAlignment="center"-->
<!--        android:textColorHint="@color/black" />-->

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/pintContainer"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="40dp"
        app:boxBackgroundColor="@color/white"
        app:boxStrokeColor="@color/Lightblue"
        app:boxBackgroundMode="filled"
        app:boxCornerRadiusBottomEnd="12dp"
        app:boxCornerRadiusBottomStart="12dp"
        app:boxCornerRadiusTopEnd="12dp"
        app:boxCornerRadiusTopStart="12dp"
        app:endIconMode="clear_text"
        app:endIconTint="#2196F3"
        app:helperText="@string/required"
        app:helperTextTextColor="@color/red"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/pintEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/pint"
            android:inputType="number"
            android:lines="1"
            android:textSize="14sp"
            android:gravity="center"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/addressContainer"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="20dp"
        app:boxBackgroundColor="@color/white"
        app:boxStrokeColor="@color/Lightblue"
        app:boxBackgroundMode="filled"
        app:boxCornerRadiusBottomEnd="12dp"
        app:boxCornerRadiusBottomStart="12dp"
        app:boxCornerRadiusTopEnd="12dp"
        app:boxCornerRadiusTopStart="12dp"
        app:endIconMode="clear_text"
        app:endIconTint="#2196F3"
        app:helperText="@string/required"
        app:helperTextTextColor="@color/red"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/addressEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/address"
            android:inputType="text"
            android:lines="1"
            android:textSize="14sp"
            android:gravity="center"
            />
    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="OR"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:textSize="25dp"
        />



    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Use Default Address"
        android:textSize="25dp"
        android:textStyle="bold"
        android:checked="false"
        android:gravity="center"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="20dp"/>
    <Button
        android:id="@+id/btn"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="SEARCH"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/edit_round"/>




</LinearLayout>